--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="container" id="container">
    <div class="header"> 
     <div class="head">
-            <h1>GeeksforGeeks</h1>
+            <a id="anchor" href="https://www.geeksforgeeks.org/" target="_blank"><h1>GeeksforGeeks</h1></a>
         </div>
          <div class="details">
             <a href="#main" style="text-decoration: none;">Home</a>
@@ -60,7 +60,8 @@
             <input type="email" id="soo" placeholder="Enter your Email here"></br></br>
             <p id="ooo"><b>Your Password</b></p>
             <input type="password" id="soo" placeholder="Enter your password here"></br>
-            <div id="but"><button>Sign Up</button></div>
+            <div id="but"><button>Sign Up</button>
+            </div>
         </div>
         <div class="six">
             <div class="onee">
